--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+p {
+  font-size: 14px;
+}
 ::-webkit-scrollbar {
   width: 0.5rem;
 }
